--- a/Split App/Base.lproj/Main.storyboard
+++ b/Split App/Base.lproj/Main.storyboard
@@ -350,36 +350,31 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="165" id="BW3-4g-ygB" customClass="EventCell" customModule="Split_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="165"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="211" id="BW3-4g-ygB" customClass="EventTableViewCell" customModule="Split_App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="211"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BW3-4g-ygB" id="skb-5R-LB2">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="165"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BW3-4g-ygB" id="skb-5R-LB2" customClass="EventTableViewCell" customModule="Split_App" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="211"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="event name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aS1-AK-VL3">
-                                            <rect key="frame" x="134" y="11" width="153" height="35"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="event name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aS1-AK-VL3">
+                                            <rect key="frame" x="129" y="20" width="89" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="event date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BgK-Bk-BIk">
-                                            <rect key="frame" x="134" y="54" width="153" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="event date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BgK-Bk-BIk">
+                                            <rect key="frame" x="129" y="50.5" width="80.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ohv-eb-PxI">
-                                            <rect key="frame" x="295" y="6" width="85" height="72"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" image="check-mark-undo"/>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8v-PR-w7t">
-                                            <rect key="frame" x="295" y="86" width="85" height="52"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8v-PR-w7t">
+                                            <rect key="frame" x="154" y="147" width="90" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="3Pu-VM-HoT"/>
+                                                <constraint firstAttribute="width" constant="90" id="IUE-ag-V5b"/>
+                                            </constraints>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" title="Pay">
                                                 <backgroundConfiguration key="background">
@@ -389,9 +384,13 @@
                                                 <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </buttonConfiguration>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spF-Nb-Pvs">
-                                            <rect key="frame" x="134" y="96" width="84" height="31"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spF-Nb-Pvs">
+                                            <rect key="frame" x="50" y="101" width="84" height="31"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="31" id="McW-gg-lh1"/>
+                                                <constraint firstAttribute="width" constant="84" id="PkH-2X-otB"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="zoB-Lg-26j"/>
+                                            </constraints>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" title="Details">
                                                 <backgroundConfiguration key="background">
@@ -400,11 +399,39 @@
                                                 <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </buttonConfiguration>
                                         </button>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imageIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Wgw-bC-Y2Y">
-                                            <rect key="frame" x="20" y="11" width="96" height="121"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Wgw-bC-Y2Y">
+                                            <rect key="frame" x="15" y="15" width="99" height="81"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="99" id="AQQ-qC-plk"/>
+                                                <constraint firstAttribute="height" constant="81" id="FyN-Te-zcH"/>
+                                            </constraints>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ohv-eb-PxI">
+                                            <rect key="frame" x="343" y="10" width="56" height="117"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="46" id="K4i-2V-vUd"/>
+                                                <constraint firstAttribute="width" constant="56" id="NUf-0X-pBf"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="check-mark-undo"/>
+                                        </button>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="aS1-AK-VL3" firstAttribute="leading" secondItem="Wgw-bC-Y2Y" secondAttribute="trailing" constant="15" id="DsR-dq-dzG"/>
+                                        <constraint firstItem="Wgw-bC-Y2Y" firstAttribute="leading" secondItem="skb-5R-LB2" secondAttribute="leading" constant="15" id="FN6-Uy-VOT"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="spF-Nb-Pvs" secondAttribute="bottom" constant="10" id="Mbr-YE-C7o"/>
+                                        <constraint firstItem="b8v-PR-w7t" firstAttribute="top" secondItem="Ohv-eb-PxI" secondAttribute="bottom" constant="20" id="PLb-YX-LZT"/>
+                                        <constraint firstItem="spF-Nb-Pvs" firstAttribute="leading" secondItem="skb-5R-LB2" secondAttribute="leading" constant="50" id="UF5-ad-guy"/>
+                                        <constraint firstItem="BgK-Bk-BIk" firstAttribute="leading" secondItem="Wgw-bC-Y2Y" secondAttribute="trailing" constant="15" id="WCk-FX-Fli"/>
+                                        <constraint firstItem="BgK-Bk-BIk" firstAttribute="top" secondItem="aS1-AK-VL3" secondAttribute="bottom" constant="10" id="btn-WJ-gWx"/>
+                                        <constraint firstItem="Wgw-bC-Y2Y" firstAttribute="top" secondItem="skb-5R-LB2" secondAttribute="top" constant="15" id="cgZ-sk-YYS"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ohv-eb-PxI" secondAttribute="trailing" constant="15" id="dNO-lK-GEn"/>
+                                        <constraint firstItem="spF-Nb-Pvs" firstAttribute="top" secondItem="BgK-Bk-BIk" secondAttribute="bottom" constant="30" id="eqb-LO-WDQ"/>
+                                        <constraint firstItem="Ohv-eb-PxI" firstAttribute="top" secondItem="skb-5R-LB2" secondAttribute="top" constant="10" id="gIU-6Y-DHH"/>
+                                        <constraint firstItem="b8v-PR-w7t" firstAttribute="leading" secondItem="spF-Nb-Pvs" secondAttribute="trailing" constant="20" id="jWx-rr-RyC"/>
+                                        <constraint firstItem="aS1-AK-VL3" firstAttribute="top" secondItem="skb-5R-LB2" secondAttribute="top" constant="20" id="q9a-54-4mn"/>
+                                        <constraint firstAttribute="bottom" secondItem="b8v-PR-w7t" secondAttribute="bottom" constant="20" id="x4U-cq-gTo"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
